# python-xmrig

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: build.yml
xmrig/: __init__.py  xmrig.py
