[tool.poetry]
name = "xmrig"
version = "1.1.0"
description = "A python package for easy in line interfacing with XMRig Miner HTTP API"
authors = ["CoulterStutz <coultercash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

