[tool.poetry]
name = "xmrig"
version = "1.1.1"
description = "A python package for easy in line interfacing with XMRig Miner HTTP API"
authors = ["CoulterStutz <coultercash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
psutil = "^6.0.0"


[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

